logout qo'shdim
